Update collated code for release

--- a/collated/main/A0124368A.md
+++ b/collated/main/A0124368A.md
@@ -2,7 +2,8 @@
 ###### /java/seedu/opus/commons/core/Trie.java
 ``` java
 /**
- * Java implementation of Trie prefix tree for autocompletion.
+ * Java implementation of Trie prefix tree for autocompletion. More information for how a Trie works can be found here:
+ * https://medium.com/algorithms/trie-prefix-tree-algorithm-ee7ab3fe3413
  *
  * @author xbili (Credits to Marcus McCurdy)
  *
@@ -13,15 +14,21 @@ public class Trie {
     protected String value;
     protected boolean terminal = false;
 
+    /** Creates an empty Trie. */
     public Trie() {
         this(null);
     }
 
+    /** Creates a Trie with a default value. */
     private Trie(String value) {
         this.value = value;
         children = new HashMap<Character, Trie>();
     }
 
+    /**
+     * Adds a character into the prefix tree.
+     * @param c - character to be inserted into the Trie
+     */
     protected void add(char c) {
         String val;
         if (this.value == null) {
@@ -29,13 +36,19 @@ public class Trie {
         } else {
             val = this.value + c;
         }
+
         children.put(c, new Trie(val));
     }
 
+    /**
+     * Inserts a string into the prefix tree.
+     * @param word - String to be inserted into prefix tree
+     */
     public void insert(String word) {
         if (word == null) {
             throw new IllegalArgumentException("Cannot add null to a Trie");
         }
+
         Trie node = this;
         for (char c : word.toCharArray()) {
             if (!node.children.containsKey(c)) {
@@ -43,9 +56,15 @@ public class Trie {
             }
             node = node.children.get(c);
         }
+
         node.terminal = true;
     }
 
+    /**
+     * Finds a word in the prefix tree.
+     * @param word - string to find in the prefix tree
+     * @return the word if found, else an empty string
+     */
     public String find(String word) {
         Trie node = this;
         for (char c : word.toCharArray()) {
@@ -57,6 +76,10 @@ public class Trie {
         return node.value;
     }
 
+    /**
+     * @param prefix
+     * @return Collection of all the matching words that should be part of the autocomplete.
+     */
     public Collection<String> autoComplete(String prefix) {
         Trie node = this;
         for (char c : prefix.toCharArray()) {
@@ -65,19 +88,25 @@ public class Trie {
             }
             node = node.children.get(c);
         }
-        return node.allPrefixes();
+
+        return node.getAllPrefixes();
     }
 
-    protected Collection<String> allPrefixes() {
+    /**
+     * @return Collection of all the matching prefixes of the current node in the Trie.
+     */
+    protected Collection<String> getAllPrefixes() {
         List<String> results = new ArrayList<String>();
         if (this.terminal) {
             results.add(this.value);
         }
+
         for (Entry<Character, Trie> entry : children.entrySet()) {
             Trie child = entry.getValue();
-            Collection<String> childPrefixes = child.allPrefixes();
+            Collection<String> childPrefixes = child.getAllPrefixes();
             results.addAll(childPrefixes);
         }
+
         return results;
     }
 
@@ -85,12 +114,16 @@ public class Trie {
 ```
 ###### /java/seedu/opus/logic/commands/MarkCommand.java
 ``` java
+/**
+ * Toggles a single task in the task manager as complete/incomplete.
+ */
 public class MarkCommand extends Command {
 
     public static final String COMMAND_WORD = "mark";
 
-    public static final String MESSAGE_USAGE = "";
-    public static final String MESSAGE_MARK_TASK_SUCCESS = "Marked Task: %1$s as complete";
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": toggles the complete status of a task.\n"
+            + "Parameters: INDEX (must be a positive integer)\n"
+            + "Example: mark 3";
 
     private final int filteredTaskListIndex;
 
@@ -100,10 +133,16 @@ public class MarkCommand extends Command {
 
     @Override
     public CommandResult execute() throws CommandException {
+        List<ReadOnlyTask> lastShownList = model.getFilteredTaskList();
+
+        if (filteredTaskListIndex > lastShownList.size()) {
+            throw new CommandException(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+        }
+
         Status status;
         EditTaskDescriptor editTaskDescriptor = new EditTaskDescriptor();
         try {
-            status = new Status("complete");
+            status = getNewStatusForTask();
         } catch (IllegalValueException e) {
             throw new CommandException("Invalid status created.");
         }
@@ -111,9 +150,31 @@ public class MarkCommand extends Command {
         editTaskDescriptor.setStatus(Optional.of(status));
 
         EditCommand editCommand = new EditCommand(filteredTaskListIndex, editTaskDescriptor);
-
         editCommand.setData(model);
+
         return editCommand.execute();
+    }
+
+    /** Returns incomplete status if task is complete, and complete status if task is incomplete */
+    private Status getNewStatusForTask() throws IllegalValueException {
+        if (isTaskCompleteAt(filteredTaskListIndex)) {
+            return new Status(Status.STATUS_INCOMPLETE);
+        }
+
+        return new Status(Status.STATUS_COMPLETE);
+    }
+
+    /** Returns the task at index inside filtered task list */
+    private ReadOnlyTask getTask(int index) {
+        UnmodifiableObservableList<ReadOnlyTask> list = model.getFilteredTaskList();
+        // -1 to convert to zero based index
+        return list.get(index - 1);
+    }
+
+    /** Returns a boolean which indicates if a task at the specified index is completed */
+    private boolean isTaskCompleteAt(int index) {
+        ReadOnlyTask task = getTask(index);
+        return task.getStatus().isComplete();
     }
 
 }
@@ -130,7 +191,6 @@ public class MarkCommandParser {
      * and returns an MarkCommand object for execution.
      */
     public Command parse(String args) {
-
         Optional<Integer> index = ParserUtil.parseIndex(args);
         if (!index.isPresent()) {
             return new IncorrectCommand(
@@ -169,6 +229,39 @@ public class MarkCommandParser {
 
         return dateTime.isAfter(startOfWeek) && dateTime.isBefore(endOfWeek);
     }
+```
+###### /java/seedu/opus/model/task/ReadOnlyTask.java
+``` java
+        final StringBuilder builder = new StringBuilder();
+
+        builder.append(getName()).append("\n");
+
+        if (getPriority().isPresent()) {
+            builder.append(" Priority: ").append(getPriority().get().toString()).append("\n");
+        }
+
+        builder.append(" Status: ");
+        builder.append(getStatus()).append("\n");
+
+        if (getNote().isPresent()) {
+            builder.append(" Note: ").append(getNote().get().toString()).append("\n");
+        }
+
+        if (getStartTime().isPresent()) {
+            builder.append(" Start Time: ").append(getStartTime().get().toString()).append("\n");
+        }
+
+        if (getEndTime().isPresent()) {
+            builder.append(" End Time: ").append(getEndTime().get().toString()).append("\n");
+        }
+
+        boolean hasTags = getTags().toSet().size() > 0;
+        if (hasTags) {
+            builder.append(" Tags: ");
+            getTags().forEach(builder::append);
+        }
+
+        return builder.toString();
 ```
 ###### /java/seedu/opus/model/task/Status.java
 ``` java
@@ -260,6 +353,9 @@ public class MarkCommandParser {
 
     @Override
     public Optional<DateTime> getStartTime() {
+        if (startTime != null && startTime.dateTime == null) {
+            return Optional.empty();
+        }
         return Optional.ofNullable(startTime);
     }
 ```
@@ -267,6 +363,9 @@ public class MarkCommandParser {
 ``` java
     @Override
     public Optional<DateTime> getEndTime() {
+        if (endTime != null && endTime.dateTime == null) {
+            return Optional.empty();
+        }
         return Optional.ofNullable(endTime);
     }
 ```
@@ -354,8 +453,23 @@ public class MarkCommandParser {
      */
     private static class AutocompleteTrie extends Trie {
 
-        private static final String[] COMMANDS = { "add", "delete", "edit", "mark", "unmark", "schedule", "list",
-            "help", "find", "undo", "redo", "clear" };
+        private static final String[] COMMANDS = {
+            AddCommand.COMMAND_WORD,
+            DeleteCommand.COMMAND_WORD,
+            EditCommand.COMMAND_WORD,
+            MarkCommand.COMMAND_WORD,
+            ListCommand.COMMAND_WORD,
+            HelpCommand.COMMAND_WORD,
+            FindCommand.COMMAND_WORD,
+            UndoCommand.COMMAND_WORD,
+            RedoCommand.COMMAND_WORD,
+            ClearCommand.COMMAND_WORD,
+            SaveCommand.COMMAND_WORD,
+            SortCommand.COMMAND_WORD,
+            ScheduleCommand.COMMAND_WORD,
+            SyncCommand.COMMAND_WORD,
+            ExitCommand.COMMAND_WORD
+        };
 
         private void init() {
             for (String command : COMMANDS) {
@@ -369,6 +483,7 @@ public class MarkCommandParser {
         private boolean hasMatch(String prefix) {
             return !autoComplete(prefix).isEmpty();
         }
+
     }
 ```
 ###### /java/seedu/opus/ui/MainWindow.java
@@ -413,20 +528,16 @@ public class MarkCommandParser {
 ```
 ###### /java/seedu/opus/ui/TaskCard.java
 ``` java
-        name.setText(task.getName().fullName);
-        setPriorityView(task);
-        note.setText(task.getNote().map(Note::toString).orElse(""));
-
-        if (task.getStatus().isComplete()) {
-            cardPane.getStyleClass().add(STYLE_COMPLETED_TASK);
-        }
-
-        startTime.setText(task.getStartTime().map(DateTime::toString).map(s -> "Start: " + s).orElse(""));
-        endTime.setText(task.getEndTime().map(DateTime::toString).map(s -> "End: " + s).orElse(""));
+        setNameLabel(task);
+        setCardStatus(task);
+        setNoteLabel(task);
+        setPriorityLabel(task);
+        setStartTimeLabel(task);
+        setEndTimeLabel(task);
 ```
 ###### /java/seedu/opus/ui/TaskCard.java
 ``` java
-    private void setPriorityView(ReadOnlyTask task) {
+    private void setPriorityLabel(ReadOnlyTask task) {
         String text = task.getPriority()
                 .map(Priority::toString)
                 .map(String::toUpperCase)
@@ -459,6 +570,45 @@ public class MarkCommandParser {
         }
 
         return Optional.ofNullable(styleClass);
+    }
+
+    private void setNameLabel(ReadOnlyTask task) {
+        name.setText(task.getName().fullName);
+    }
+
+    private void setNoteLabel(ReadOnlyTask task) {
+        if (task.getNote().isPresent()) {
+            note.setText(task.getNote().get().toString());
+        } else {
+            removeFromView(note);
+        }
+    }
+
+    private void setStartTimeLabel(ReadOnlyTask task) {
+        if (task.getStartTime().isPresent()) {
+            startTime.setText("Start: " + task.getStartTime().get().toString());
+        } else {
+            removeFromView(startTime);
+        }
+    }
+
+    private void setEndTimeLabel(ReadOnlyTask task) {
+        if (task.getEndTime().isPresent()) {
+            endTime.setText("End: " + task.getEndTime().get().toString());
+        } else {
+            removeFromView(endTime);
+        }
+    }
+
+    private void setCardStatus(ReadOnlyTask task) {
+        if (task.getStatus().isComplete()) {
+            cardPane.getStyleClass().add(STYLE_COMPLETED_TASK);
+        }
+    }
+
+    private void removeFromView(Label label) {
+        label.setVisible(false);
+        label.setManaged(false);
     }
 ```
 ###### /resources/view/DarkTheme.css
