--- a/collated/main/A0126345J.md
+++ b/collated/main/A0126345J.md
@@ -17,6 +17,10 @@
 ```
 ###### /java/seedu/opus/logic/commands/ScheduleCommand.java
 ``` java
+/**
+ * Schedule either the end time or both the start time and the end time
+ * of an existing task in the task manager.
+ */
 public class ScheduleCommand extends Command {
     public static final String COMMAND_WORD = "schedule";
 
@@ -25,7 +29,6 @@ public class ScheduleCommand extends Command {
     public static final String MESSAGE_SCHEDULE_TASK_SUCCESS = "Task is scheduled successfully";
     private final int filteredTaskListIndex;
     private final EditTaskDescriptor editTaskDescriptor;
-
 
     public ScheduleCommand(int filteredTaskListIndex, EditTaskDescriptor editTaskDescriptor) {
         assert filteredTaskListIndex > 0;
@@ -447,10 +450,11 @@ public class DateTime {
 
     public static final String MESSAGE_DATETIME_CONSTRAINTS =
             "Opus does not recognize the date time format. Please try again.";
+    private static final String EMPTY_STRING = "";
 
     public final LocalDateTime dateTime;
     private static DateTimeFormatter formatter = DateTimeFormatter
-            .ofPattern("MM/dd/uuuu HH:mm")
+            .ofPattern("dd MMM uu hh:mma")
             .withResolverStyle(ResolverStyle.STRICT);
     private Clock clock;
 
@@ -461,16 +465,19 @@ public class DateTime {
      */
     public DateTime(LocalDateTime dateTime) throws IllegalValueException {
         assert dateTime != null;
-
         this.clock = Clock.systemDefaultZone();
         this.dateTime = dateTime;
     }
 
     public DateTime(String dateTime) throws IllegalValueException {
         assert dateTime != null;
-        this.clock = Clock.systemDefaultZone();
-        this.dateTime =  DateTimeParser.parse(dateTime)
-                .orElseThrow(() -> new IllegalValueException(MESSAGE_DATETIME_CONSTRAINTS));
+        if (dateTime.equals(EMPTY_STRING)) {
+            this.dateTime = null;
+        } else {
+            this.clock = Clock.systemDefaultZone();
+            this.dateTime =  DateTimeParser.parse(dateTime)
+                    .orElseThrow(() -> new IllegalValueException(MESSAGE_DATETIME_CONSTRAINTS));
+        }
     }
 
 
@@ -665,35 +672,6 @@ public interface ReadOnlyTask {
      * Formats the task as text, showing all task's details.
      */
     default String getAsText() {
-        final StringBuilder builder = new StringBuilder();
-
-        builder.append(getName());
-
-        if (getPriority().isPresent()) {
-            builder.append(" Priority: ").append(getPriority().get().toString());
-        }
-
-        builder.append(" Status: ");
-        builder.append(getStatus());
-
-        if (getNote().isPresent()) {
-            builder.append(" Note: ").append(getNote().get().toString());
-        }
-
-        if (getStartTime().isPresent()) {
-            builder.append(" Start Time: ").append(getStartTime().get().toString());
-        }
-
-        if (getEndTime().isPresent()) {
-            builder.append(" End Time: ").append(getEndTime().get().toString());
-        }
-
-        builder.append(" Tags: ");
-        getTags().forEach(builder::append);
-        return builder.toString();
-    }
-
-}
 ```
 ###### /java/seedu/opus/model/task/Task.java
 ``` java
