--- a/collated/main/A0148081H.md
+++ b/collated/main/A0148081H.md
@@ -113,7 +113,7 @@ public class FileDeletionException extends Exception {
 public class SaveCommand extends Command {
 
     public static final String COMMAND_WORD = "save";
-    public static final String COMMAND_FORMAT = "save LOCATION";
+    public static final String COMMAND_FORMAT = "save DIRECTORY";
     public static final String COMMAND_DESCRIPTION = "saves task data at specified location";
     public static final String COMMAND_EXAMPLE = "save data/opus.xml";
 
@@ -201,7 +201,7 @@ public class SortCommand extends Command {
             + "Parameters: KEYWORD\n"
             + "Example: " + COMMAND_WORD + " priority";
 
-    public static final String MESSAGE_SORT_CONSTRAINTS = "Sort can only take in 'all', 'status', 'priority', "
+    public static final String MESSAGE_SORT_CONSTRAINTS = "Sort can only take in 'all', 'priority', "
             + "'start', 'end' as parameters";
 
     public static final String MESSAGE_SUCCESS = "Sorted all tasks by ";
@@ -483,4 +483,14 @@ public class TaskComparator implements Comparator<ReadOnlyTask> {
         assert StringUtil.isValidPathToFile(filePath);
         this.filePath = filePath;
     }
+```
+###### /java/seedu/opus/ui/StatusBarFooter.java
+``` java
+    @Subscribe
+    public void handleChangeSaveLocationEvent(ChangeSaveLocationEvent event) {
+        String saveLocation = event.location;
+        logger.info(LogsCenter.getEventHandlingLogMessage(event, "Setting save location to: " + saveLocation));
+        setSaveLocation(saveLocation);
+    }
+}
 ```
