--- a/collated/test/A0148081H.md
+++ b/collated/test/A0148081H.md
@@ -37,6 +37,35 @@ public class SaveCommandTest extends TaskManagerGuiTest {
     }
 }
 ```
+###### /java/guitests/SortCommandTest.java
+``` java
+public class SortCommandTest extends TaskManagerGuiTest {
+
+    @Test
+    public void sortPriorityTestSuccess() throws Exception {
+        String parameter = "priority";
+        TestTask[] expectedSortedByPriorityTasksList = td.getSortedByPriorityTasks();
+
+        assertSortSuccess(parameter, expectedSortedByPriorityTasksList);
+    }
+
+    /**
+     * Checks whether the sorted task lists has the correct updated details.
+     *
+     * @param filteredTaskListIndex index of task to edit in filtered list.
+     * @param taskManagerIndex index of task to edit in the task manager.
+     *      Must refer to the same task as {@code filteredTaskListIndex}
+     * @param editedTask the expected task after editing the task's details.
+     */
+    private void assertSortSuccess(String parameter, TestTask[] expectedTasksList) {
+        commandBox.runCommand("sort " + parameter);
+
+        // confirm the two lists match
+        assertTrue(taskListPanel.isListMatching(expectedTasksList));
+    }
+
+}
+```
 ###### /java/seedu/opus/logic/LogicManagerTest.java
 ``` java
     @Test
