--- a/collated/test/A0148087W.md
+++ b/collated/test/A0148087W.md
@@ -68,7 +68,46 @@ public class UndoCommandTest extends TaskManagerGuiTest {
 ###### /java/seedu/opus/logic/LogicManagerTest.java
 ``` java
     @Test
-    public void executeUndoResetToPreviousState() throws Exception {
+    public void executeUndoPreviousAddTaskCommandWithEmptyTaskListSuccessful() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task testTask1 = helper.generateTaskWithName("Task1");
+
+        //Adding task to empty task manager and undo it
+        model.resetData(new TaskManager());
+        model.addTask(testTask1);
+        assertCommandSuccess("undo", UndoCommand.MESSAGE_SUCCESS, new TaskManager(), Collections.emptyList());
+    }
+
+    @Test
+    public void executeUndoPreviousAddTaskCommandWithExistingTasksSuccessful() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task testTask1 = helper.generateTaskWithName("Task1");
+        Task testTask2 = helper.generateTaskWithName("Task2");
+        Task testTask3 = helper.generateTaskWithName("Task3");
+        List<Task> existingTasks = helper.generateTaskList(testTask1, testTask2);
+        TaskManager existingTaskManager = helper.generateTaskManager(existingTasks);
+
+        //Undo adding task when there are existing tasks
+        model.resetData(existingTaskManager);
+        model.addTask(testTask3);
+        assertCommandSuccess("undo", UndoCommand.MESSAGE_SUCCESS, existingTaskManager, existingTasks);
+    }
+
+    @Test
+    public void executeUndoPreviousDeleteCommandSuccessful() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task testTask1 = helper.generateTaskWithName("Task1");
+        List<Task> oneTasks = helper.generateTaskList(testTask1);
+        TaskManager expectedTaskManager = helper.generateTaskManager(oneTasks);
+
+        //Undo Deletion
+        model.addTask(testTask1);
+        model.deleteTask(testTask1);
+        assertCommandSuccess("undo", UndoCommand.MESSAGE_SUCCESS, expectedTaskManager, oneTasks);
+    }
+
+    @Test
+    public void executeUndoPreviousEditCommandSuccessful() throws Exception {
         TestDataHelper helper = new TestDataHelper();
         Task testTask1 = helper.generateTaskWithName("Task1");
         Task testTask2 = helper.generateTaskWithName("Task2");
@@ -76,126 +115,180 @@ public class UndoCommandTest extends TaskManagerGuiTest {
         TaskManager expectedTaskManager = helper.generateTaskManager(oneTasks);
         Task testTask1Copy = helper.generateTaskWithName("Task1");
 
-        //Undo adding one task
-        model.addTask(testTask1);
-        assertCommandSuccess("undo", UndoCommand.MESSAGE_SUCCESS, new TaskManager(), Collections.emptyList());
-
-        //Undo adding task when there is 1 existing task
-        model.resetData(new TaskManager());
-        model.addTask(testTask1);
-        model.addTask(testTask2);
-        assertCommandSuccess("undo", UndoCommand.MESSAGE_SUCCESS, expectedTaskManager, oneTasks);
-
-        //Undo Deletion
-        model.resetData(new TaskManager());
-        model.addTask(testTask1);
-        model.deleteTask(testTask1);
-        assertCommandSuccess("undo", UndoCommand.MESSAGE_SUCCESS, expectedTaskManager, oneTasks);
-
         //Undo Edit
-        model.resetData(new TaskManager());
         model.addTask(testTask1Copy);
         model.updateTask(0, testTask2);
         assertCommandSuccess("undo", UndoCommand.MESSAGE_SUCCESS, expectedTaskManager, oneTasks);
     }
 
     @Test
-    public void executeRedoResetToPrecedingState() throws Exception {
-        TaskManager tempTaskManager;
+    public void executeUndoMultipleCommandsSuccessful() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task testTask1 = helper.generateTaskWithName("Task1");
+        Task testTask2 = helper.generateTaskWithName("Task2");
+        Task testTask3 = helper.generateTaskWithName("Task3");
+        Task testTask1Copy = helper.generateTaskWithName("Task1");
+
+        model.addTask(testTask1Copy);
+        model.updateTask(0, testTask2);
+        model.addTask(testTask3);
+        model.deleteTask(testTask3);
+        model.addTask(testTask1);
+
+        //Undo all previous commands
+        model.resetToPreviousState();
+        model.resetToPreviousState();
+        model.resetToPreviousState();
+        model.resetToPreviousState();
+        assertCommandSuccess("undo", UndoCommand.MESSAGE_SUCCESS, new TaskManager(), Collections.emptyList());
+    }
+
+    @Test
+    public void assertUndoExceptionWithNoPreviousCommandExecuted() {
+        assertCommandFailure("undo", TaskManagerStateHistory.MESSAGE_INVALID_UNDO);
+    }
+
+    @Test
+    public void assertUndoExceptionAfterUndoingSomeCommandWithNoUndoAvailable() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task testTask1 = helper.generateTaskWithName("Task1");
+
+        //Adding task to empty task manager and undo it
+        model.addTask(testTask1);
+        model.resetToPreviousState();
+        assertCommandFailure("undo", TaskManagerStateHistory.MESSAGE_INVALID_UNDO);
+    }
+
+    @Test
+    public void executeRedoPreviousUndoAddCommandSuccesful() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task testTask1 = helper.generateTaskWithName("Task1");
+        List<Task> oneTasks = helper.generateTaskList(testTask1);
+        TaskManager expectedTaskManagerWithOneTask = helper.generateTaskManager(oneTasks);
+
+        //Redo adding one task
+        model.addTask(testTask1);
+        model.resetToPreviousState();   //undo
+        assertCommandSuccess("redo", RedoCommand.MESSAGE_SUCCESS, expectedTaskManagerWithOneTask, oneTasks);
+    }
+
+    @Test
+    public void executeRedoMultipleUndoAddCommandSuccessful() throws Exception {
         TestDataHelper helper = new TestDataHelper();
         Task testTask1 = helper.generateTaskWithName("Task1");
         Task testTask2 = helper.generateTaskWithName("Task2");
         List<Task> oneTasks = helper.generateTaskList(testTask1);
         List<Task> twoTasks = helper.generateTaskList(testTask1, testTask2);
-        List<Task> taskTwoOnly = helper.generateTaskList(testTask2);
         TaskManager expectedTaskManagerWithOneTask = helper.generateTaskManager(oneTasks);
         TaskManager expectedTaskManagerWithTwoTask = helper.generateTaskManager(twoTasks);
-        Task testTask1Copy = helper.generateTaskWithName("Task1");
-
-        //Redo adding one task
-        model.addTask(testTask1);
-        assertCommandSuccess("undo", UndoCommand.MESSAGE_SUCCESS, new TaskManager(), Collections.emptyList());
-        assertCommandSuccess("redo", RedoCommand.MESSAGE_SUCCESS, expectedTaskManagerWithOneTask, oneTasks);
 
         //Redo adding two task
-        model.resetData(new TaskManager());
         model.addTask(testTask1);
         model.addTask(testTask2);
-        assertCommandSuccess("undo", UndoCommand.MESSAGE_SUCCESS, expectedTaskManagerWithOneTask, oneTasks);
-        assertCommandSuccess("undo", UndoCommand.MESSAGE_SUCCESS, new TaskManager(), Collections.emptyList());
+        model.resetToPreviousState();   //undo
+        model.resetToPreviousState();   //undo
         assertCommandSuccess("redo", RedoCommand.MESSAGE_SUCCESS, expectedTaskManagerWithOneTask, oneTasks);
         assertCommandSuccess("redo", RedoCommand.MESSAGE_SUCCESS, expectedTaskManagerWithTwoTask, twoTasks);
+    }
 
-        //Redo Deletion
-        model.resetData(new TaskManager());
+    @Test
+    public void executeRedoPreviousUndoDeleteCommandSuccessful() throws Exception {
+        TaskManager tempTaskManager;
+        TestDataHelper helper = new TestDataHelper();
+        Task testTask1 = helper.generateTaskWithName("Task1");
+
         model.addTask(testTask1);
         model.deleteTask(testTask1);
         tempTaskManager = new TaskManager(model.getTaskManager());
-        assertCommandSuccess("undo", UndoCommand.MESSAGE_SUCCESS, expectedTaskManagerWithOneTask, oneTasks);
+        model.resetToPreviousState();   //undo
         assertCommandSuccess("redo", RedoCommand.MESSAGE_SUCCESS, tempTaskManager, Collections.emptyList());
+    }
 
-        //Redo Edit
-        model.resetData(new TaskManager());
+    @Test
+    public void executeRedoPreviousUndoEditCommandSuccessful() throws Exception {
+        TaskManager tempTaskManager;
+        TestDataHelper helper = new TestDataHelper();
+        Task testTask2 = helper.generateTaskWithName("Task2");
+        List<Task> taskTwoOnly = helper.generateTaskList(testTask2);
+        Task testTask1Copy = helper.generateTaskWithName("Task1");
+
         model.addTask(testTask1Copy);
         model.updateTask(0, testTask2);
         tempTaskManager = new TaskManager(model.getTaskManager());
-        assertCommandSuccess("undo", UndoCommand.MESSAGE_SUCCESS, expectedTaskManagerWithOneTask, oneTasks);
+        model.resetToPreviousState();   //undo
         assertCommandSuccess("redo", RedoCommand.MESSAGE_SUCCESS, tempTaskManager, taskTwoOnly);
     }
 
     @Test
-    public void assertUndoException() {
-        assertCommandFailure("undo", History.MESSAGE_INVALID_UNDO);
+    public void assertUndoExceptionWithNoPreviousUndoCommandExecuted() {
+        assertCommandFailure("redo", TaskManagerStateHistory.MESSAGE_INVALID_REDO);
     }
 
     @Test
-    public void assertRedoException() {
-        assertCommandFailure("redo", History.MESSAGE_INVALID_REDO);
-    }
-
-    @Test
-    public void executeUndoFailure() throws Exception {
+    public void assertRedoExceptionAfterRedoingSomeUndoCommandsWithNoRedoAvailable() throws Exception {
         TestDataHelper helper = new TestDataHelper();
         Task testTask1 = helper.generateTaskWithName("Task1");
 
         model.addTask(testTask1);
-        assertCommandSuccess("undo", UndoCommand.MESSAGE_SUCCESS, new TaskManager(), Collections.emptyList());
-        assertCommandFailure("undo", History.MESSAGE_INVALID_UNDO);
+        model.resetToPreviousState();
+        model.resetToNextState();
+        assertCommandFailure("redo", TaskManagerStateHistory.MESSAGE_INVALID_REDO);
+    }
+```
+###### /java/seedu/opus/logic/SyncCommandTest.java
+``` java
+public class SyncCommandTest {
+
+    @Rule
+    public TemporaryFolder saveFolder = new TemporaryFolder();
+
+    @Rule
+    public ExpectedException thrown = ExpectedException.none();
+
+    private Logic logic;
+    private Model model = spy(new ModelManager());
+
+    @Before
+    public void setUp() {
+        String tempTaskManagerFile = saveFolder.getRoot().getPath() + "TempTaskManager.xml";
+        String tempPreferencesFile = saveFolder.getRoot().getPath() + "TempPreferences.json";
+        logic = new LogicManager(model, new StorageManager(tempTaskManagerFile, tempPreferencesFile));
     }
 
     @Test
-    public void executeRedoFailure() throws Exception {
-        TestDataHelper helper = new TestDataHelper();
-        Task testTask1 = helper.generateTaskWithName("Task1");
-        List<Task> oneTasks = helper.generateTaskList(testTask1);
-        TaskManager expectedTaskManager = helper.generateTaskManager(oneTasks);
+    public void executeSyncCommandWithValidOnArgumentSuccess() throws CommandException, SyncException {
+        SyncServiceGtaskTest.copyTestCredentials();
 
-        model.addTask(testTask1);
-        assertCommandSuccess("undo", UndoCommand.MESSAGE_SUCCESS, new TaskManager(), Collections.emptyList());
-        assertCommandSuccess("redo", RedoCommand.MESSAGE_SUCCESS, expectedTaskManager, oneTasks);
-        assertCommandFailure("redo", History.MESSAGE_INVALID_REDO);
-    }
+        CommandResult result = logic.execute("sync on");
+        assertEquals(result.feedbackToUser, SyncCommand.MESSAGE_SYNC_ON_SUCCESS);
+        verify(model).startSync();
 
-    /*
-    @Test
-    public void executeSyncCommandWithValidOnArgumentSuccess() {
-        assertCommandSuccess("sync on", SyncCommand.MESSAGE_SYNC_ON_SUCCESS,
-                             new TaskManager(), Collections.emptyList());
-    }
-    */
-
-
-    @Test
-    public void executeSyncCommandWithValidOffArgumentSuccess() {
-        assertCommandSuccess("sync off", SyncCommand.MESSAGE_SYNC_OFF_SUCCESS,
-                             new TaskManager(), Collections.emptyList());
+        SyncServiceGtaskTest.deleteCredential();
     }
 
     @Test
-    public void executeSyncCommandWithInvalidArgumentException() {
-        assertCommandFailure("sync invalid", String.format(MESSAGE_INVALID_COMMAND_FORMAT,
-                                                           SyncCommand.MESSAGE_USAGE));
+    public void executeSyncCommandWithValidOffArgumentSuccess() throws CommandException, SyncException {
+        CommandResult result = logic.execute("sync off");
+        assertEquals(result.feedbackToUser, SyncCommand.MESSAGE_SYNC_OFF_SUCCESS);
+        verify(model).stopSync();
     }
+
+    @Test
+    public void executeSyncCommandWithInvalidArgumentRaiseException() throws CommandException {
+        assertNotNull(logic);
+        thrown.expect(CommandException.class);
+        thrown.expectMessage(SyncCommand.MESSAGE_USAGE);
+        logic.execute("sync invalid args");
+    }
+
+    @Test
+    public void executeSyncCommandWithValidArgumentsAndSyncCommandRaised() throws SyncException, CommandException {
+        doThrow(new SyncException(null)).when(model).startSync();
+        assertNotNull(logic);
+        thrown.expect(CommandException.class);
+        logic.execute("sync on");
+    }
+}
 ```
 ###### /java/seedu/opus/model/task/PriorityTest.java
 ``` java
@@ -251,6 +344,107 @@ public class PriorityTest {
     @Test (expected = IllegalValueException.class)
     public void pareseInvalidXmlString() throws IllegalValueException {
         Priority.valueOf("NON");
+    }
+}
+```
+###### /java/seedu/opus/model/TaskManagerTest.java
+``` java
+    @Test
+    public void getNonEventTaskListFromTaskManagerWithEventTasksSuccessful() throws DuplicateTaskException {
+        TypicalTestTasks td = new TypicalTestTasks();
+        List<Task> testTasks = Arrays.asList(new Task(td.laundry), new Task(td.taskWithoutDeadline),
+                new Task(td.taskWithoutStartTime));
+        List<Task> expectedTasks = Arrays.asList(new Task(td.taskWithoutDeadline), new Task(td.taskWithoutStartTime));
+        TaskManager taskManager = new TaskManager();
+        taskManager.setTasks(testTasks);
+
+        assertEquals(taskManager.getNonEventTaskList(), expectedTasks);
+    }
+```
+###### /java/seedu/opus/sync/SyncServiceGtaskTest.java
+``` java
+public class SyncServiceGtaskTest {
+
+    public static final String TEST_CREDENTIAL_DIRECTORY = "cred/StoredCredential_1";
+    public static final String STORED_CREDENTIAL_DIRECTORY = "data/credentials/StoredCredential";
+
+    private static SyncManager mockSyncManager;
+    private static SyncServiceGtask syncServiceGtask;
+
+    private static File dataStoreCredential;
+    private static File dataStoreTestCredential;
+
+    @Before
+    public void setUp() throws SyncException {
+        copyTestCredentials();
+        mockSyncManager = mock(SyncManager.class);
+        syncServiceGtask = spy(new SyncServiceGtask());
+        syncServiceGtask.setSyncManager(mockSyncManager);
+        syncServiceGtask.start();
+    }
+
+    @Test
+    public void syncServiceGtaskStartSuccessful() throws SyncException {
+        assertNotNull(syncServiceGtask);
+        reset(syncServiceGtask);
+        syncServiceGtask.start();
+        verify(syncServiceGtask).start();
+    }
+
+    @Test
+    public void syncServiceGtaskStopSuccessful() throws SyncException {
+        assertNotNull(syncServiceGtask);
+        reset(syncServiceGtask);
+        syncServiceGtask.stop();
+        verify(syncServiceGtask).stop();
+    }
+
+    @Test
+    public void syncServiceGtaskUpdateTaskListSuccessful() throws SyncException {
+        assertNotNull(syncServiceGtask);
+        reset(syncServiceGtask);
+
+        Task mockTask = mock(Task.class);
+        Optional<DateTime> mockStartDateTime = Optional.ofNullable(null);
+        Optional<DateTime> mockEndDateTime = Optional.of(mock(DateTime.class));
+        when(mockTask.getStartTime()).thenReturn(mockStartDateTime);
+        when(mockTask.getEndTime()).thenReturn(mockEndDateTime);
+
+        List<Task> list = new ArrayList<Task>();
+        list.add(mockTask);
+
+        syncServiceGtask.start();
+        syncServiceGtask.updateTaskList(list);
+
+        verify(syncServiceGtask).updateTaskList(list);
+    }
+
+    public static void copyTestCredentials() {
+        dataStoreTestCredential = new File(TEST_CREDENTIAL_DIRECTORY);
+        dataStoreCredential = new File(STORED_CREDENTIAL_DIRECTORY);
+
+        if (!Files.exists(dataStoreCredential.toPath())) {
+            try {
+                Files.createDirectories(dataStoreCredential.toPath());
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+
+        try {
+            deleteCredential();
+            Path path = dataStoreCredential.toPath();
+            Files.copy(dataStoreTestCredential.toPath(), path, StandardCopyOption.REPLACE_EXISTING);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    public static void deleteCredential() {
+        dataStoreCredential = new File("data/credentials/StoredCredential");
+        if (dataStoreCredential.exists()) {
+            dataStoreCredential.delete();
+        }
     }
 }
 ```
