--- a/collated/main/A0164032U.md
+++ b/collated/main/A0164032U.md
@@ -1,5 +1,11 @@
 # A0164032U
-###### \java\seedu\address\commons\events\ui\NewResultAvailableEvent.java
+###### /java/seedu/task/logic/parser/ArgumentTokenizer.java
+``` java
+    public boolean getEmpty(Prefix prefix) {
+        return !(this.tokenizedArguments.containsKey(prefix));
+    }
+```
+###### /java/seedu/task/commons/events/ui/NewResultAvailableEvent.java
 ``` java
     public final String message;
     public boolean isError;
@@ -16,7 +22,7 @@
 
 }
 ```
-###### \java\seedu\address\commons\util\DateUtil.java
+###### /java/seedu/task/commons/util/DateUtil.java
 ``` java
     /**
      * Returns true if a given string is a valid date.
@@ -33,124 +39,63 @@
     }
 }
 ```
-###### \java\seedu\address\logic\commands\AddCommand.java
+###### /java/seedu/task/model/task/Task.java
 ``` java
-    public AddCommand(String name, String end, String group) throws IllegalValueException {
-        this.toAdd = new DeadlineTask(
-                new Name(name),
-                new EndDate(end),
-                new Group(group),
-                UniqueTagList.build(Tag.TAG_INCOMPLETE)
-                );
-    }
-
-    /*
-     * Constructor: floating task without starting date and end date
-     */
-```
-###### \java\seedu\address\logic\commands\AddCommand.java
-``` java
-    public AddCommand(String name, String group) throws IllegalValueException {
-        this.toAdd = new FloatingTask(
-                new Name(name),
-                new Group(group),
-                UniqueTagList.build(Tag.TAG_INCOMPLETE)
-                );
-    }
-    
-```
-###### \java\seedu\address\logic\commands\AddCommand.java
-``` java
-    public AddCommand(String name, String start, String end, String group) throws IllegalValueException {
-        this.toAdd = new Task(
-                new Name(name),
-                new StartDate(start),
-                new EndDate(end),
-                new Group(group),
-                UniqueTagList.build(Tag.TAG_INCOMPLETE)
-                );
-    }
-    
-```
-###### \java\seedu\address\logic\parser\AddCommandParser.java
-``` java
-    public Command parse(String args) {
-        ArgumentTokenizer argsTokenizer = new ArgumentTokenizer(PREFIX_START_DATE, PREFIX_END_DATE, PREFIX_GROUP);
-        argsTokenizer.tokenize(args);
-        try {
-            if (!argsTokenizer.getEmpty(PREFIX_START_DATE) && !argsTokenizer.getEmpty(PREFIX_END_DATE)) {
-                
-                return new AddCommand(
-                        argsTokenizer.getPreamble().get(),
-                        argsTokenizer.getValue(PREFIX_START_DATE).get(),
-                        argsTokenizer.getValue(PREFIX_END_DATE).get(),
-                        argsTokenizer.getValue(PREFIX_GROUP).get()
-                        );
-                
-            } else if (!argsTokenizer.getEmpty(PREFIX_END_DATE)) {
-                
-                return new AddCommand(
-                        argsTokenizer.getPreamble().get(),
-                        argsTokenizer.getValue(PREFIX_END_DATE).get(),
-                        argsTokenizer.getValue(PREFIX_GROUP).get()
-                        );
-                
-            } else if (!argsTokenizer.getEmpty(PREFIX_START_DATE)) {
-                
-                throw new NoSuchElementException("");
-                
-            } else {
-                
-                return new AddCommand(
-                        argsTokenizer.getPreamble().get(),
-                        argsTokenizer.getValue(PREFIX_GROUP).get()
-                        );
-            }
-        } catch (NoSuchElementException nsee) {
-            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
-        } catch (IllegalValueException ive) {
-            return new IncorrectCommand(ive.getMessage());
+    @Override
+    public java.util.Date getStartTime() {
+        if (start != null) {
+            return start.getTime();
         }
+        return new java.util.Date(Long.MIN_VALUE);
     }
 
-}
-```
-###### \java\seedu\address\logic\parser\ArgumentTokenizer.java
-``` java
-    public boolean getEmpty(Prefix prefix) {
-        return !(this.tokenizedArguments.containsKey(prefix));
+    @Override
+    public java.util.Date getEndTime() {
+        if (end != null) {
+            return end.getTime();
+        }
+        return new java.util.Date(Long.MAX_VALUE);
     }
+
 ```
-###### \java\seedu\address\model\task\Date.java
+###### /java/seedu/task/model/task/Task.java
 ``` java
-   public static boolean isValidDate(String date){
-            return DateUtil.isValidDate(date);
-   }
+    public int compareTo(ReadOnlyTask o) {
+        return getEndTime().compareTo(o.getEndTime());
+    }
+
+```
+###### /java/seedu/task/model/task/Date.java
+``` java
+    public static boolean isValidDate(String date) {
+        return DateUtil.isValidDate(date);
+    }
 
     @Override
     public int hashCode() {
-        return inputValue.hashCode() * value.hashCode();
+        return getInputValue().hashCode() * getValue().hashCode();
     }
 
 }
 ```
-###### \java\seedu\address\model\task\ReadOnlyTask.java
+###### /java/seedu/task/model/task/ReadOnlyTask.java
 ``` java
     default String getAsText() {
         final StringBuilder builder = new StringBuilder();
-        
+
         boolean hasStartDate = getStartDate() != null;
         boolean hasEndDate = getEndDate() != null;
-        
+        boolean hasGroup = !getGroup().value.equals(Group.GROUP_ID_HIDDEN);
+
         builder
-        .append(getName())
-        .append(hasStartDate ? " Start Date: " : "")
-        .append(hasStartDate ? getStartDate() : "")
-        .append(hasEndDate ? " End Date: " : "")
-        .append(hasEndDate ? getEndDate() : "")
-        .append(" Group: ")
-        .append(getGroup())
-        .append(" Status: ");
+            .append(getName() + ":")
+            .append(hasStartDate ? " Start Date: " : "")
+            .append(hasStartDate ? "[" + getStartDate() + "]" : "")
+            .append(hasEndDate ? " End Date: " + "]" : "")
+            .append(hasEndDate ? "[" + getEndDate() + "]" : "")
+            .append(hasGroup ? " Group: " : "")
+            .append(hasGroup ? "[" + getGroup() + "]" : "")
+            .append(" Status: ");
         getTags().forEach(builder::append);
         return builder.toString();
     }
@@ -163,38 +108,12 @@
 
 }
 ```
-###### \java\seedu\address\model\task\Task.java
-``` java
-    @Override
-    public java.util.Date getStartTime() {
-        if (start != null) {
-            return start.getTime();
-        }
-        return new java.util.Date(Long.MIN_VALUE);
-    }
-    
-    @Override
-    public java.util.Date getEndTime() {
-        if (end != null) {
-            return end.getTime();
-        }
-        return new java.util.Date(Long.MAX_VALUE);
-    }
-    
-```
-###### \java\seedu\address\model\task\Task.java
-``` java
-    public int compareTo(ReadOnlyTask o){
-        return getEndTime().compareTo(o.getEndTime());
-    }
-
-```
-###### \java\seedu\address\model\task\UniqueTaskList.java
+###### /java/seedu/task/model/task/UniqueTaskList.java
 ``` java
         Comparator<Task> comparator = Comparator.comparing(Task::getEndTime);
-        FXCollections.sort(internalList,comparator);
+        FXCollections.sort(internalList, comparator);
 ```
-###### \java\seedu\address\ui\CommandBox.java
+###### /java/seedu/task/ui/CommandBox.java
 ``` java
         try {
             CommandResult commandResult = logic.execute(lastCommand);
@@ -203,36 +122,21 @@
             setStyleToIndicateCommandSuccess();
             commandTextField.setText("");
             LOGGER.info("Result: " + commandResult.feedbackToUser);
-            raise(new NewResultAvailableEvent(commandResult.feedbackToUser,false));
+            raise(new NewResultAvailableEvent(commandResult.feedbackToUser, false));
 
         } catch (CommandException e) {
             // handle command failure
             setStyleToIndicateCommandFailure();
             LOGGER.info("Invalid command: " + commandTextField.getText());
-            raise(new NewResultAvailableEvent(e.getMessage(),true));
+            raise(new NewResultAvailableEvent(e.getMessage(), true));
         }
 ```
-###### \java\seedu\address\ui\ResultDisplay.java
-``` java
-    @Subscribe
-    private void handleNewResultAvailableEvent(NewResultAvailableEvent event) {
-        LOGGER.info(LogsCenter.getEventHandlingLogMessage(event));
-        displayed.setValue(event.message);
-        if (event.isError == true) {
-            resultDisplay.setStyle("-fx-text-fill: red;");
-        } else {
-            resultDisplay.setStyle("-fx-text-fill: black;");
-        }
-    }
-
-}
-```
-###### \java\seedu\address\ui\TaskCard.java
+###### /java/seedu/task/ui/TaskCard.java
 ``` java
 public class TaskCard extends UiPart<Region> {
 
     private static final String FXML = "PersonListCard.fxml";
-    
+
     @FXML
     private HBox cardPane;
     @FXML
@@ -248,30 +152,41 @@ public class TaskCard extends UiPart<Region> {
 
     public TaskCard(ReadOnlyTask person, int displayedIndex) {
         super(FXML);
-        
+
         name.setText(person.getName().fullName);
         id.setText(displayedIndex + ". ");
-        
-        if (person.getEndDate() == null) {
+
+        if (person.getEndDate() == null || person.getEndDate().getInputValue() == null) {
             end.setVisible(false);
-            end.setStyle("-fx-font-size: 0pt;");
         } else {
             end.setText("Ends:   " + person.getEndDate());
         }
 
-        if (person.getStartDate() == null) {
+        if (person.getStartDate() == null || person.getStartDate().getInputValue() == null) {
             start.setVisible(false);
-            start.setStyle("-fx-font-size: 0pt;");
         } else {
             start.setText("Starts: " + person.getStartDate());
         }
-        
-        group.setText(person.getGroup().value);
-        
+
+        if (!person.getGroup().value.equals(Group.GROUP_ID_HIDDEN)) {
+            group.setText(person.getGroup().value);
+        } else {
+            group.setVisible(false);
+        }
+
         if (person.hasPassed()) {
             setStyleToIndicateEndDatePassed();
         }
-        
+
+        try {
+            if (person.getTags().contains(new Tag(Tag.TAG_COMPLETE))) {
+                setStyleToIndicateComplete();
+            } else {
+                setStyleToIndicateIncomplete();
+            }
+        } catch (IllegalValueException e) {
+        }
+
         cardPane.autosize();
     }
 
@@ -281,5 +196,28 @@ public class TaskCard extends UiPart<Region> {
     private void setStyleToIndicateEndDatePassed() {
         cardPane.getStyleClass().add(Ui.ERROR_STYLE_CLASS);
     }
+
+    private void setStyleToIndicateComplete() {
+        cardPane.getStyleClass().add(Ui.COMPLETE_STYLE_CLASS);
+    }
+
+    private void setStyleToIndicateIncomplete() {
+        cardPane.getStyleClass().add(Ui.INCOMPLETE_STYLE_CLASS);
+    }
+}
+```
+###### /java/seedu/task/ui/ResultDisplay.java
+``` java
+    @Subscribe
+    private void handleNewResultAvailableEvent(NewResultAvailableEvent event) {
+        LOGGER.info(LogsCenter.getEventHandlingLogMessage(event));
+        displayed.setValue(event.message);
+        if (event.isError == true) {
+            resultDisplay.setStyle("-fx-text-fill: red;");
+        } else {
+            resultDisplay.setStyle("-fx-text-fill: black;");
+        }
+    }
+
 }
 ```
