--- a/collated/main/A0164466X.md
+++ b/collated/main/A0164466X.md
@@ -1,23 +1,41 @@
 # A0164466X
-###### \java\seedu\address\logic\commands\AddCommand.java
+###### /java/seedu/task/logic/parser/Parser.java
 ``` java
-    @Override
-    public CommandResult execute() throws CommandException {
-        assert model != null;
-        try {
-            model.addTask(toAdd);
-            
-            String message = MESSAGE_SUCCESS + (toAdd.hasPassed() ? "\n" + MESSAGE_PASSED : "");
-            return new CommandResult(String.format(message, toAdd));
-        } catch (UniqueTaskList.DuplicatePersonException e) {
-            throw new CommandException(MESSAGE_DUPLICATE_TASK);
-        }
+        case ListCompleteCommand.COMMAND_WORD:
+            return new ListCompleteCommand();
 
+        case ListIncompleteCommand.COMMAND_WORD:
+            return new ListIncompleteCommand();
+
+        case HelpCommand.COMMAND_WORD:
+            return new HelpCommand();
+
+        case ThemeCommand.COMMAND_WORD:
+            return new ThemeCommand();
+
+        case MarkCommand.COMMAND_WORD:
+            return new MarkCommandParser().parse(arguments);
+
+        case UnmarkCommand.COMMAND_WORD:
+            return new UnmarkCommandParser().parse(arguments);
+
+        case UndoCommand.COMMAND_WORD:
+            return new UndoCommandParser().parse(arguments);
+
+        case RedoCommand.COMMAND_WORD:
+            return new RedoCommandParser().parse(arguments);
+
+        case ExitCommand.COMMAND_WORD:
+            return new ExitCommand();
+
+        default:
+            return new IncorrectCommand(MESSAGE_UNKNOWN_COMMAND);
+        }
     }
 
 }
 ```
-###### \java\seedu\address\logic\commands\ListCommand.java
+###### /java/seedu/task/logic/commands/ListCommand.java
 ``` java
 /**
  * Lists all tasks in the task manager to the user.
@@ -36,26 +54,7 @@ public class ListCommand extends Command {
     }
 }
 ```
-###### \java\seedu\address\logic\commands\ListCompleteCommand.java
-``` java
-/**
- * Lists all tasks in the task manager to the user.
- */
-public class ListCompleteCommand extends Command {
-
-    public static final String COMMAND_WORD = "lc";
-
-    public static final String MESSAGE_SUCCESS = "Listed all completed tasks";
-
-
-    @Override
-    public CommandResult execute() {
-        model.updateFilteredListToShowComplete();
-        return new CommandResult(MESSAGE_SUCCESS);
-    }
-}
-```
-###### \java\seedu\address\logic\commands\ListIncompleteCommand.java
+###### /java/seedu/task/logic/commands/ListIncompleteCommand.java
 ``` java
 /**
  * Lists all tasks in the task manager to the user.
@@ -74,17 +73,89 @@ public class ListIncompleteCommand extends Command {
     }
 }
 ```
-###### \java\seedu\address\logic\commands\MarkCommand.java
+###### /java/seedu/task/logic/commands/ExitCommand.java
+``` java
+    public static final String MESSAGE_EXIT_ACKNOWLEDGEMENT = "Exiting Yesterday's Tomorrow as requested ...";
+
+    @Override
+    public CommandResult execute() {
+        EventsCenter.getInstance().post(new ExitAppRequestEvent());
+        return new CommandResult(MESSAGE_EXIT_ACKNOWLEDGEMENT);
+    }
+
+}
+```
+###### /java/seedu/task/logic/commands/AddCommand.java
+``` java
+    @Override
+    public CommandResult execute() throws CommandException {
+        assert model != null;
+        try {
+            model.addTask(toAdd);
+            String message = MESSAGE_SUCCESS + (toAdd.hasPassed() ? "\n" + MESSAGE_PASSEDDATE : "");
+            return new CommandResult(String.format(message, toAdd));
+        } catch (UniqueTaskList.DuplicateTaskException e) {
+            throw new CommandException(MESSAGE_DUPLICATE_TASK);
+        }
+
+    }
+}
+```
+###### /java/seedu/task/logic/commands/HelpCommand.java
+``` java
+/**
+ * Format full help instructions for every command for display.
+ */
+public class HelpCommand extends Command {
+
+    public static final String COMMAND_WORD = "help";
+
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Shows program usage instructions.\n"
+            + "Example: " + COMMAND_WORD;
+
+    public static final String SHOWING_HELP_MESSAGE = "Opened help window.";
+
+    @Override
+    public CommandResult execute() {
+        EventsCenter.getInstance().post(new ShowHelpRequestEvent());
+        return new CommandResult(SHOWING_HELP_MESSAGE);
+    }
+}
+```
+###### /java/seedu/task/logic/commands/UnmarkCommand.java
+``` java
+    public static final String MESSAGE_MARK_TASK_SUCCESS = "Marked task as incomplete: %1$s";
+```
+###### /java/seedu/task/logic/commands/ListCompleteCommand.java
+``` java
+/**
+ * Lists all tasks in the task manager to the user.
+ */
+public class ListCompleteCommand extends Command {
+
+    public static final String COMMAND_WORD = "lc";
+
+    public static final String MESSAGE_SUCCESS = "Listed all completed tasks";
+
+
+    @Override
+    public CommandResult execute() {
+        model.updateFilteredListToShowComplete();
+        return new CommandResult(MESSAGE_SUCCESS);
+    }
+}
+```
+###### /java/seedu/task/logic/commands/MarkCommand.java
 ``` java
     /**
-     * Creates and returns a {@code Person} with the details of {@code personToEdit}
+     * Creates and returns a {@code Task} with the details of {@code taskToEdit}
      * edited to be complete.
      */
-    private static ReadOnlyTask createMarkedPerson(ReadOnlyTask personToEdit) {
-        assert personToEdit != null;
+    private static ReadOnlyTask createMarkedTask(ReadOnlyTask taskToEdit) {
+        assert taskToEdit != null;
 
         UniqueTagList updatedTags =
-                personToEdit
+                taskToEdit
                 .getTags()
                 .except(UniqueTagList.build(
                                 Tag.TAG_COMPLETE,
@@ -98,61 +169,24 @@ public class ListIncompleteCommand extends Command {
             e.printStackTrace();
         }
 
-        return new Task(personToEdit.getName(),
-                personToEdit.getStartDate(), personToEdit.getEndDate(), personToEdit.getGroup(), updatedTags);
-}
-}
-```
-###### \java\seedu\address\logic\commands\UnmarkCommand.java
-``` java
-    public static final String MESSAGE_MARK_PERSON_SUCCESS = "Marked task as incomplete: %1$s";
-```
-###### \java\seedu\address\logic\parser\Parser.java
-``` java
-        case ListCompleteCommand.COMMAND_WORD:
-            return new ListCompleteCommand();
-            
-        case ListIncompleteCommand.COMMAND_WORD:
-            return new ListIncompleteCommand();
-
-        case ExitCommand.COMMAND_WORD:
-            return new ExitCommand();
-
-        case HelpCommand.COMMAND_WORD:
-            return new HelpCommand();
-            
-        case ThemeCommand.COMMAND_WORD:
-            return new ThemeCommand();
-
-        case MarkCommand.COMMAND_WORD:
-            return new MarkCommandParser().parse(arguments);
-
-        case UnmarkCommand.COMMAND_WORD:
-            return new UnmarkCommandParser().parse(arguments);
-
-        case UndoCommand.COMMAND_WORD:
-            return new UndoCommandParser().parse(arguments);
-
-        case RedoCommand.COMMAND_WORD:
-            return new RedoCommandParser().parse(arguments);
-
-        default:
-            return new IncorrectCommand(MESSAGE_UNKNOWN_COMMAND);
-        }
+        return new Task(taskToEdit.getName(),
+                taskToEdit.getStartDate(), taskToEdit.getEndDate(), taskToEdit.getGroup(), updatedTags);
     }
-
 }
 ```
-###### \java\seedu\address\model\Model.java
+###### /java/seedu/task/commons/events/ui/ShowThemeRequestEvent.java
 ``` java
-    /** Updates the filter of the filtered person list to show all complete tasks */
-    void updateFilteredListToShowComplete();
-    
-    /** Updates the filter of the filtered person list to show all incomplete tasks */
-    void updateFilteredListToShowIncomplete();
-
+/**
+ * An event requesting to view themes.
+ */
 ```
-###### \java\seedu\address\model\ModelManager.java
+###### /java/seedu/task/commons/events/ui/ExportRequestEvent.java
+``` java
+/**
+ * Represents a request to export the stored YTomorrow task file.
+ */
+```
+###### /java/seedu/task/model/ModelManager.java
 ``` java
     @Override
     public void updateFilteredListToShowComplete() {
@@ -180,94 +214,37 @@ public class ListIncompleteCommand extends Command {
     //=========== Filtered Person List Accessors =============================================================
 
     @Override
-    public UnmodifiableObservableList<ReadOnlyTask> getFilteredPersonList() {
+    public UnmodifiableObservableList<ReadOnlyTask> getFilteredTaskList() {
         return new UnmodifiableObservableList<>(filteredPersons);
     }
 
-    @Override
-    public void updateFilteredListToShowAll() {
-        filteredPersons.setPredicate(null);
-    }
-
-    @Override
-    public void updateFilteredPersonList(Set<String> keywords) {
-        updateFilteredPersonList(new PredicateExpression(new NameQualifier(keywords)));
-    }
-
-    private void updateFilteredPersonList(Expression expression) {
-        filteredPersons.setPredicate(expression::satisfies);
-    }
-
-    //========== Inner classes/interfaces used for filtering =================================================
-
-    interface Expression {
-        boolean satisfies(ReadOnlyTask person);
-        String toString();
-    }
-
-    private class PredicateExpression implements Expression {
-
-        private final Qualifier qualifier;
-
-        PredicateExpression(Qualifier qualifier) {
-            this.qualifier = qualifier;
-        }
-
-        @Override
-        public boolean satisfies(ReadOnlyTask person) {
-            return qualifier.run(person);
-        }
-
-        @Override
-        public String toString() {
-            return qualifier.toString();
-        }
-    }
-
-    interface Qualifier {
-        boolean run(ReadOnlyTask person);
-        String toString();
-    }
-
-    private class NameQualifier implements Qualifier {
-        private Set<String> nameKeyWords;
-
-        NameQualifier(Set<String> nameKeyWords) {
-            this.nameKeyWords = nameKeyWords;
-        }
-
-        @Override
-        public boolean run(ReadOnlyTask person) {
-            return nameKeyWords.stream()
-                    .filter(keyword -> StringUtil.containsWordIgnoreCase(person.getName().fullName, keyword))
-                    .findAny()
-                    .isPresent();
-        }
-
-        @Override
-        public String toString() {
-            return "name=" + String.join(", ", nameKeyWords);
-        }
-    }
-    
 ```
-###### \java\seedu\address\model\ModelManager.java
+###### /java/seedu/task/model/ModelManager.java
 ``` java
     private class TagQualifier implements Qualifier {
         private UniqueTagList tags;
-        
-        TagQualifier(UniqueTagList tags){
+
+        TagQualifier(UniqueTagList tags) {
             this.tags = tags;
         }
-        
+
         @Override
         public boolean run(ReadOnlyTask task) {
             return task.getTags().equals(tags);
         }
-        
+
         //Default toString() method used
-        
+
     }
 
 }
+```
+###### /java/seedu/task/model/Model.java
+``` java
+    /** Updates the filter of the filtered person list to show all complete tasks */
+    void updateFilteredListToShowComplete();
+
+    /** Updates the filter of the filtered person list to show all incomplete tasks */
+    void updateFilteredListToShowIncomplete();
+
 ```
