--- a/collated/main/A0164889E.md
+++ b/collated/main/A0164889E.md
@@ -1,48 +1,19 @@
 # A0164889E
-###### \java\seedu\address\logic\commands\GroupCommand.java
-``` java
-/**
- * Finds and lists all persons in address book whose group contains any of the argument keywords.
- * Keyword matching is case sensitive.
- */
-public class GroupCommand extends Command {
-
-    public static final String COMMAND_WORD = "group";
-
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Finds all tasks whose groups contain any of "
-            + "the specified keywords (case-sensitive) and displays them as a list with index numbers.\n"
-            + "Parameters: KEYWORD [MORE_KEYWORDS]...\n"
-            + "Example: " + COMMAND_WORD + " learning";
-
-    private final Set<String> keywords;
-
-    public GroupCommand(Set<String> keywords) {
-        this.keywords = keywords;
-    }
-
-    @Override
-    public CommandResult execute() {
-        model.updateFilteredPersonListGroup(keywords);
-        return new CommandResult(getMessageForPersonListShownSummary(model.getFilteredPersonList().size()));
-    }
-
-}
-```
-###### \java\seedu\address\logic\Logic.java
+###### /java/seedu/task/logic/Logic.java
 ``` java
     /** Returns the filtered list of tasks for Complete tasks*/
-    ObservableList<ReadOnlyTask> getFilteredPersonListComplete();
+    ObservableList<ReadOnlyTask> getFilteredTaskListComplete();
 
 ```
-###### \java\seedu\address\logic\LogicManager.java
+###### /java/seedu/task/logic/LogicManager.java
 ``` java
     @Override
-    public ObservableList<ReadOnlyTask> getFilteredPersonListComplete() {
+    public ObservableList<ReadOnlyTask> getFilteredTaskListComplete() {
         return model.getFilteredPersonListComplete();
     }
 
 ```
-###### \java\seedu\address\logic\parser\GroupCommandParser.java
+###### /java/seedu/task/logic/parser/GroupCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new GroupCommand object
@@ -68,7 +39,7 @@ public class GroupCommandParser {
 
 }
 ```
-###### \java\seedu\address\logic\parser\Parser.java
+###### /java/seedu/task/logic/parser/Parser.java
 ``` java
         case GroupCommand.COMMAND_WORD:
             return new GroupCommandParser().parse(arguments);
@@ -77,158 +48,36 @@ public class GroupCommandParser {
             return new ListCommand();
 
 ```
-###### \java\seedu\address\model\Model.java
+###### /java/seedu/task/logic/commands/GroupCommand.java
 ``` java
-    /** Returns the filtered task complete list as an {@code UnmodifiableObservableList<ReadOnlyTask>} */
-    UnmodifiableObservableList<ReadOnlyTask> getFilteredPersonListComplete();
+/**
+ * Finds and lists all tasks in task manager whose group contains any of the argument keywords.
+ * Keyword matching is case sensitive.
+ */
+public class GroupCommand extends Command {
 
-    /** Updates the filter of the filtered person list to show all persons */
-    void updateFilteredListToShowAll();
+    public static final String COMMAND_WORD = "group";
 
-    /** Updates the filter of the filtered task list to filter by the given keywords for FindCommand*/
-    void updateFilteredPersonList(Set<String> keywords);
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Finds all tasks whose groups contain any of "
+            + "the specified keywords (case-sensitive) and displays them as a list with index numbers.\n"
+            + "Parameters: KEYWORD [MORE_KEYWORDS]...\n"
+            + "Example: " + COMMAND_WORD + " learning";
 
-```
-###### \java\seedu\address\model\Model.java
-``` java
-    /** Updates the filter of the filtered task list to filter by the given keywords for GroupCommand*/
-    void updateFilteredPersonListGroup(Set<String> keywords);
+    private final Set<String> keywords;
 
-```
-###### \java\seedu\address\model\ModelManager.java
-``` java
-    private final FilteredList<ReadOnlyTask> filteredPersonsComplete;
-
-    /**
-     * Initializes a ModelManager with the given addressBook and userPrefs.
-     */
-    public ModelManager(ReadOnlyTaskManager addressBook, UserPrefs userPrefs) {
-        super();
-        assert !CollectionUtil.isAnyNull(addressBook, userPrefs);
-
-        logger.fine("Initializing with address book: " + addressBook + " and user prefs " + userPrefs);
-
-        this.addressBook = new YTomorrow(addressBook);
-        this.history = new History<ReadOnlyTaskManager>();
-        filteredPersons = new FilteredList<>(this.addressBook.getPersonList());
-```
-###### \java\seedu\address\model\ModelManager.java
-``` java
-        filteredPersonsComplete = new FilteredList<>(this.addressBook.getPersonList());
-
-        indicateCompleteListToChange();
-```
-###### \java\seedu\address\model\ModelManager.java
-``` java
-        indicateCompleteListToChange();
-```
-###### \java\seedu\address\model\ModelManager.java
-``` java
-        indicateCompleteListToChange();
-```
-###### \java\seedu\address\model\ModelManager.java
-``` java
-        indicateCompleteListToChange();
-```
-###### \java\seedu\address\model\ModelManager.java
-``` java
-        indicateCompleteListToChange();
-```
-###### \java\seedu\address\model\ModelManager.java
-``` java
-            indicateCompleteListToChange();
-```
-###### \java\seedu\address\model\ModelManager.java
-``` java
-            indicateCompleteListToChange();
-```
-###### \java\seedu\address\model\ModelManager.java
-``` java
-        indicateCompleteListToChange();
-```
-###### \java\seedu\address\model\ModelManager.java
-``` java
-    public void indicateCompleteListToChange() {
-        UniqueTagList tags;
-        try {
-            tags = new UniqueTagList("complete");
-            updateFilteredPersonListTag(tags);
-        } catch (DuplicateTagException e) {
-            // TODO Auto-generated catch block
-            e.printStackTrace();
-        } catch (IllegalValueException e) {
-            // TODO Auto-generated catch block
-            e.printStackTrace();
-        }
-    }
-
-```
-###### \java\seedu\address\model\ModelManager.java
-``` java
-    @Override
-    public UnmodifiableObservableList<ReadOnlyTask> getFilteredPersonListComplete() {
-        return new UnmodifiableObservableList<>(filteredPersonsComplete);
+    public GroupCommand(Set<String> keywords) {
+        this.keywords = keywords;
     }
 
     @Override
-    public void updateFilteredListToShowAll() {
-        filteredPersons.setPredicate(null);
+    public CommandResult execute() {
+        model.updateFilteredTaskListGroup(keywords);
+        return new CommandResult(getMessageForTaskListShownSummary(model.getFilteredTaskList().size()));
     }
 
-    @Override
-    public void updateFilteredPersonList(Set<String> keywords) {
-        updateFilteredPersonList(new PredicateExpression(new NameQualifier(keywords)));
-    }
-
-    private void updateFilteredPersonList(Expression expression) {
-        filteredPersons.setPredicate(expression::satisfies);
-    }
-
+}
 ```
-###### \java\seedu\address\model\ModelManager.java
-``` java
-    @Override
-    public void updateFilteredPersonListGroup(Set<String> keywords) {
-        updateFilteredPersonListGroup(new PredicateExpression(new GroupQualifier(keywords)));
-    }
-
-    private void updateFilteredPersonListGroup(Expression expression) {
-        filteredPersons.setPredicate(expression::satisfies);
-    }
-
-    public void updateFilteredPersonListTag(UniqueTagList keywords) {
-        updateFilteredPersonListTag(new PredicateExpression(new TagQualifier(keywords)));
-    }
-
-    private void updateFilteredPersonListTag(Expression expression) {
-        filteredPersonsComplete.setPredicate(expression::satisfies);
-    }
-```
-###### \java\seedu\address\model\ModelManager.java
-``` java
-    private class GroupQualifier implements Qualifier {
-        private Set<String> groupKeyWords;
-
-        GroupQualifier(Set<String> groupKeyWords) {
-            this.groupKeyWords = groupKeyWords;
-        }
-
-        @Override
-        public boolean run(ReadOnlyTask task) {
-            return groupKeyWords.stream()
-                    .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getGroup().value, keyword))
-                    .findAny()
-                    .isPresent();
-        }
-
-        @Override
-        public String toString() {
-            return "name=" + String.join(", ", groupKeyWords);
-        }
-    }
-
-```
-###### \java\seedu\address\model\task\Group.java
+###### /java/seedu/task/model/task/Group.java
 ``` java
 package seedu.task.model.task;
 
@@ -240,6 +89,7 @@ import seedu.task.commons.exceptions.IllegalValueException;
  */
 public class Group {
 
+    public static final String GROUP_ID_HIDDEN = "__NO_GROUP__";
     public static final String MESSAGE_GROUP_CONSTRAINTS =
             "Task group can take any values, and it should not be blank";
 
@@ -290,234 +140,154 @@ public class Group {
 
 }
 ```
-###### \java\seedu\address\ui\MainWindow.java
+###### /java/seedu/task/model/ModelManager.java
 ``` java
-    private TaskListPanelComplete personListPanelComplete;
-    private TaskListPanel personListPanel;
-    private Config config;
-    private UserPrefs prefs;
-
-    @FXML
-    private AnchorPane commandBoxPlaceholder;
-
-    @FXML
-    private AnchorPane personListPanelPlaceholder;
-
-```
-###### \java\seedu\address\ui\MainWindow.java
-``` java
-    @FXML
-    private AnchorPane personListPanelCompletePlaceholder;
-
-    @FXML
-    private AnchorPane resultDisplayPlaceholder;
-
-    @FXML
-    private AnchorPane statusbarPlaceholder;
-
-    @FXML
-    private MenuItem saveMenuItem;
-
-    @FXML
-    private MenuItem loadMenuItem;
-
-    @FXML
-    private MenuItem exportMenuItem;
-
-    @FXML
-    private MenuItem importMenuItem;
-
-    @FXML
-    private MenuItem helpMenuItem;
-
-    @FXML
-    private MenuItem themeMenuItem;
-
-    public MainWindow(Stage primaryStage, Config config, UserPrefs prefs, Logic logic) {
-        super(FXML, primaryStage);
-
-        // Set dependencies
-        this.logic = logic;
-        this.config = config;
-        this.prefs = prefs;
-
-        // Configure the UI
-        setTitle(config.getAppTitle());
-        setIcon(ICON);
-        setWindowMinSize(MIN_HEIGHT, MIN_WIDTH);
-        setWindowDefaultSize(prefs);
-        Scene scene = new Scene(getRoot());
-        getStage().setScene(scene);
-        ThemeWindow.changeTheme(getRoot(), prefs.getGuiSettings().getStyleSheet());
-        setAccelerators();
-    }
-
-    private void setAccelerators() {
-        setAccelerator(saveMenuItem,   KeyCombination.valueOf("ctrl+s"));
-        setAccelerator(loadMenuItem,   KeyCombination.valueOf("ctrl+v"));
-        setAccelerator(exportMenuItem, KeyCombination.valueOf("ctrl+e"));
-        setAccelerator(importMenuItem, KeyCombination.valueOf("ctrl+i"));
-        setAccelerator(helpMenuItem,   KeyCombination.valueOf("ctrl+h"));
-        setAccelerator(themeMenuItem,  KeyCombination.valueOf("ctrl+c"));
-    }
-
-    void fillInnerParts() {
-        personListPanel = new TaskListPanel(getPersonListPlaceholder(), logic.getFilteredPersonList());
-```
-###### \java\seedu\address\ui\MainWindow.java
-``` java
-        personListPanelComplete = new TaskListPanelComplete(getPersonListCompletePlaceholder(),
-                logic.getFilteredPersonListComplete());
-```
-###### \java\seedu\address\ui\MainWindow.java
-``` java
-    private AnchorPane getPersonListCompletePlaceholder() {
-        return personListPanelCompletePlaceholder;
-    }
+    private final FilteredList<ReadOnlyTask> filteredPersonsComplete;
 
     /**
-     * Returns the current size and the position of the main Window.
+     * Initializes a ModelManager with the given addressBook and userPrefs.
      */
-    GuiSettings getCurrentGuiSetting() {
-        return new GuiSettings(
-                stage.getWidth(),
-                stage.getHeight(),
-                (int) stage.getX(),
-                (int) stage.getY(),
-                Paths.get(getRoot().getStylesheets().get(0)).getFileName().toString().replaceFirst("[.][^.]+$", ""),
-                prefs.getGuiSettings().getLastLoadedYTomorrow());
-    }
+    public ModelManager(ReadOnlyTaskManager addressBook, UserPrefs userPrefs) {
+        super();
+        assert !CollectionUtil.isAnyNull(addressBook, userPrefs);
 
-    @FXML
-    public void handleHelp() {
-        HelpWindow helpWindow = new HelpWindow();
-        helpWindow.show();
+        logger.fine("Initializing with address book: " + addressBook + " and user prefs " + userPrefs);
+
+        this.addressBook = new YTomorrow(addressBook);
+        this.history = new History<ReadOnlyTaskManager>();
+        filteredPersons = new FilteredList<>(this.addressBook.getTaskList());
+```
+###### /java/seedu/task/model/ModelManager.java
+``` java
+        filteredPersonsComplete = new FilteredList<>(this.addressBook.getTaskList());
+
+        indicateCompleteListToChange();
+```
+###### /java/seedu/task/model/ModelManager.java
+``` java
+        indicateCompleteListToChange();
+```
+###### /java/seedu/task/model/ModelManager.java
+``` java
+        indicateCompleteListToChange();
+```
+###### /java/seedu/task/model/ModelManager.java
+``` java
+        indicateCompleteListToChange();
+```
+###### /java/seedu/task/model/ModelManager.java
+``` java
+        indicateCompleteListToChange();
+```
+###### /java/seedu/task/model/ModelManager.java
+``` java
+            indicateCompleteListToChange();
+```
+###### /java/seedu/task/model/ModelManager.java
+``` java
+            indicateCompleteListToChange();
+```
+###### /java/seedu/task/model/ModelManager.java
+``` java
+        indicateCompleteListToChange();
+```
+###### /java/seedu/task/model/ModelManager.java
+``` java
+    public void indicateCompleteListToChange() {
+        UniqueTagList tags;
+        try {
+            tags = new UniqueTagList("complete");
+            updateFilteredPersonListTag(tags);
+        } catch (DuplicateTagException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        } catch (IllegalValueException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
     }
 
 ```
-###### \java\seedu\address\ui\MainWindow.java
+###### /java/seedu/task/model/ModelManager.java
 ``` java
-    public TaskListPanelComplete getPersonListPanelComplete() {
-        return this.personListPanelComplete;
+    @Override
+    public UnmodifiableObservableList<ReadOnlyTask> getFilteredPersonListComplete() {
+        return new UnmodifiableObservableList<>(filteredPersonsComplete);
     }
-}
+
+    @Override
+    public void updateFilteredListToShowAll() {
+        filteredPersons.setPredicate(null);
+    }
+
+    @Override
+    public void updateFilteredTaskList(Set<String> keywords) {
+        updateFilteredPersonList(new PredicateExpression(new NameQualifier(keywords)));
+    }
+
+    private void updateFilteredPersonList(Expression expression) {
+        filteredPersons.setPredicate(expression::satisfies);
+    }
+
 ```
-###### \java\seedu\address\ui\TaskCardComplete.java
+###### /java/seedu/task/model/ModelManager.java
 ``` java
-public class TaskCardComplete extends UiPart<Region> {
-
-    private static final String FXML = "PersonListCardComplete.fxml";
-
-    @FXML
-    private HBox cardPane;
-    @FXML
-    private Label name;
-    @FXML
-    private Label id;
-    @FXML
-    private Label end;
-    @FXML
-    private Label start;
-    @FXML
-    private Label group;
-
-    public TaskCardComplete(ReadOnlyTask person, int displayedIndex) {
-        super(FXML);
-
-        name.setText(person.getName().fullName);
-        id.setText(displayedIndex + ". ");
-
-        if (person.getEndDate() == null) {
-            end.setVisible(false);
-            end.setStyle("-fx-font-size: 0pt;");
-        } else {
-            end.setText("Ends:   " + person.getEndDate());
-        }
-
-        if (person.getStartDate() == null) {
-            start.setVisible(false);
-            start.setStyle("-fx-font-size: 0pt;");
-        } else {
-            start.setText("Starts: " + person.getStartDate());
-        }
-
-        group.setText(person.getGroup().value);
-
-        if (person.hasPassed()) {
-            setStyleToIndicateEndDatePassed();
-        }
-
-        cardPane.autosize();
+    @Override
+    public void updateFilteredTaskListGroup(Set<String> keywords) {
+        updateFilteredPersonListGroup(new PredicateExpression(new GroupQualifier(keywords)));
     }
 
-    /**
-     * Sets the command box style to indicate a failed command.
-     */
-    private void setStyleToIndicateEndDatePassed() {
-        cardPane.getStyleClass().add(Ui.ERROR_STYLE_CLASS);
+    private void updateFilteredPersonListGroup(Expression expression) {
+        filteredPersons.setPredicate(expression::satisfies);
     }
-}
+
+    public void updateFilteredPersonListTag(UniqueTagList keywords) {
+        updateFilteredPersonListTag(new PredicateExpression(new TagQualifier(keywords)));
+    }
+
+    private void updateFilteredPersonListTag(Expression expression) {
+        filteredPersonsComplete.setPredicate(expression::satisfies);
+    }
 ```
-###### \java\seedu\address\ui\TaskListPanelComplete.java
+###### /java/seedu/task/model/ModelManager.java
 ``` java
-/**
- * Panel containing the list of complete tasks.
- */
-public class TaskListPanelComplete extends UiPart<Region> {
-    private static final String FXML = "PersonListPanelComplete.fxml";
+    private class GroupQualifier implements Qualifier {
+        private Set<String> groupKeyWords;
 
-    @FXML
-    private ListView<ReadOnlyTask> personListViewComplete;
-
-    public TaskListPanelComplete(AnchorPane personListCompletePlaceholder, ObservableList<ReadOnlyTask> personList) {
-        super(FXML);
-        setConnections(personList);
-        addToPlaceholder(personListCompletePlaceholder);
-    }
-
-    private void setConnections(ObservableList<ReadOnlyTask> personList) {
-        personListViewComplete.setItems(personList);
-        personListViewComplete.setCellFactory(listView -> new PersonListViewCellComplete());
-        setEventHandlerForSelectionChangeEvent();
-    }
-
-    private void addToPlaceholder(AnchorPane placeHolderPane) {
-        SplitPane.setResizableWithParent(placeHolderPane, false);
-        FxViewUtil.applyAnchorBoundaryParameters(getRoot(), 0.0, 0.0, 0.0, 0.0);
-        placeHolderPane.getChildren().add(getRoot());
-    }
-
-    private void setEventHandlerForSelectionChangeEvent() {
-        personListViewComplete.getSelectionModel().selectedItemProperty()
-                .addListener((observable, oldValue, newValue) -> {
-                    if (newValue != null) {
-                        LOGGER.fine("Selection in person list panel changed to : '" + newValue + "'");
-                        raise(new TaskPanelSelectionChangedEvent(newValue));
-                    }
-                });
-    }
-
-    public void scrollTo(int index) {
-        Platform.runLater(() -> {
-            personListViewComplete.scrollTo(index);
-            personListViewComplete.getSelectionModel().clearAndSelect(index);
-        });
-    }
-
-    class PersonListViewCellComplete extends ListCell<ReadOnlyTask> {
+        GroupQualifier(Set<String> groupKeyWords) {
+            this.groupKeyWords = groupKeyWords;
+        }
 
         @Override
-        protected void updateItem(ReadOnlyTask person, boolean empty) {
-            super.updateItem(person, empty);
+        public boolean run(ReadOnlyTask task) {
+            return groupKeyWords.stream()
+                    .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getGroup().value, keyword))
+                    .findAny()
+                    .isPresent();
+        }
 
-            if (empty || person == null) {
-                setGraphic(null);
-                setText(null);
-            } else {
-                setGraphic(new TaskCardComplete(person, getIndex() + 1).getRoot());
-            }
+        @Override
+        public String toString() {
+            return "name=" + String.join(", ", groupKeyWords);
         }
     }
 
-}
+```
+###### /java/seedu/task/model/Model.java
+``` java
+    /** Returns the filtered task complete list as an {@code UnmodifiableObservableList<ReadOnlyTask>} */
+    UnmodifiableObservableList<ReadOnlyTask> getFilteredPersonListComplete();
+
+    /** Updates the filter of the filtered person list to show all persons */
+    void updateFilteredListToShowAll();
+
+    /** Updates the filter of the filtered task list to filter by the given keywords for FindCommand*/
+    void updateFilteredTaskList(Set<String> keywords);
+
+```
+###### /java/seedu/task/model/Model.java
+``` java
+    /** Updates the filter of the filtered task list to filter by the given keywords for GroupCommand*/
+    void updateFilteredTaskListGroup(Set<String> keywords);
+
 ```
